--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "next": "11.0.1",
+    "next-swagger-doc": "^0.1.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swagger-ui-react": "^4.0.0-beta.0"
   },
   "devDependencies": {
     "eslint": "7.31.0",
